--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -304,12 +304,26 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andreas/.conda/envs/tf36/lib/python3.6/site-packages/packaging/requirements.py:66: UserWarning: warn_ungrouped_named_tokens_in_collection: setting results name 'specifier' on And expression collides with '_original_end' on contained expression\n",
+      "  VERSION_SPEC = originalTextFor(_VERSION_SPEC)(\"specifier\")\n",
+      "/home/andreas/.conda/envs/tf36/lib/python3.6/site-packages/packaging/requirements.py:69: UserWarning: warn_ungrouped_named_tokens_in_collection: setting results name 'marker' on And expression collides with '_original_end' on contained expression\n",
+      "  MARKER_EXPR = originalTextFor(MARKER_EXPR())(\"marker\")\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "usage: poetry_generator.py [-h] [--prompt PROMPT] [--title TITLE]\n",
-      "                           [--generated_lines GENERATED_LINES] [--LLM LLM]\n",
-      "                           [--LLM_sampling LLM_SAMPLING]\n",
+      "                           [--generated_lines GENERATED_LINES]\n",
+      "                           [--verse_versions VERSE_VERSIONS]\n",
+      "                           [--check_end CHECK_END]\n",
+      "                           [--invalid_verse_ends INVALID_VERSE_ENDS]\n",
+      "                           [--repetition_penalty REPETITION_PENALTY]\n",
+      "                           [--LLM LLM] [--LLM_sampling LLM_SAMPLING]\n",
       "                           [--LLM_random_first LLM_RANDOM_FIRST]\n",
       "                           [--LLM_random_all LLM_RANDOM_ALL]\n",
       "                           [--LLM_temperature LLM_TEMPERATURE]\n",
@@ -321,6 +335,8 @@
       "                           [--verse_alpha_only_after VERSE_ALPHA_ONLY_AFTER]\n",
       "                           [--LLM_2 LLM_2] [--LLM_2_pos LLM_2_POS]\n",
       "                           [--LLM_2_sampling LLM_2_SAMPLING]\n",
+      "                           [--LLM_2_temperature LLM_2_TEMPERATURE]\n",
+      "                           [--LLM_2_top_p LLM_2_TOP_P]\n",
       "                           [--top_p_dict_replace TOP_P_DICT_REPLACE]\n",
       "                           [--LLM_rhyme LLM_RHYME]\n",
       "                           [--LLM_rhyme_sampling LLM_RHYME_SAMPLING]\n",
@@ -334,6 +350,7 @@
       "                           [--num_syll_list NUM_SYLL_LIST]\n",
       "                           [--target_rythm TARGET_RYTHM] [--use_tts USE_TTS]\n",
       "                           [--use_colone_phonetics USE_COLONE_PHONETICS]\n",
+      "                           [--allow_pos_match ALLOW_POS_MATCH]\n",
       "                           [--log_stdout LOG_STDOUT]\n",
       "\n",
       "optional arguments:\n",
@@ -342,6 +359,16 @@
       "  --title TITLE         title of the poem\n",
       "  --generated_lines GENERATED_LINES\n",
       "                        number of lines that will be generated\n",
+      "  --verse_versions VERSE_VERSIONS\n",
+      "                        number of versions for one verse will be generated;\n",
+      "                        the one with lowest perplexity will be chosen\n",
+      "  --check_end CHECK_END\n",
+      "                        append '.' after verse to check perplexity\n",
+      "  --invalid_verse_ends INVALID_VERSE_ENDS\n",
+      "                        pos tokens that should not appear at the end of a\n",
+      "                        verse\n",
+      "  --repetition_penalty REPETITION_PENALTY\n",
+      "                        repetition penalty according to CTRL paper\n",
       "  --LLM LLM             generative language model to use from the huggingface\n",
       "                        library or GPT3\n",
       "  --LLM_sampling LLM_SAMPLING\n",
@@ -381,6 +408,11 @@
       "  --LLM_2_sampling LLM_2_SAMPLING\n",
       "                        sampling method for the second language model -\n",
       "                        systematic or multinomial\n",
+      "  --LLM_2_temperature LLM_2_TEMPERATURE\n",
+      "                        temperature for the second LLM\n",
+      "  --LLM_2_top_p LLM_2_TOP_P\n",
+      "                        top p for the second LLM when the sampling is\n",
+      "                        multinomial\n",
       "  --top_p_dict_replace TOP_P_DICT_REPLACE\n",
       "                        top p dictionary used for the words replaced by the\n",
       "                        second model\n",
@@ -419,6 +451,9 @@
       "  --use_colone_phonetics USE_COLONE_PHONETICS\n",
       "                        if a rhyme is detected by using colone phonetics,\n",
       "                        prefer this one over sia rhyme/tts\n",
+      "  --allow_pos_match ALLOW_POS_MATCH\n",
+      "                        Ignores the end of an alternative verse ending if the\n",
+      "                        pos tags match the original verse\n",
       "  --log_stdout LOG_STDOUT\n",
       "                        if a rhyme is detected by using colone phonetics,\n",
       "                        prefer this one over sia rhyme/tts\n"
@@ -441,19 +476,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run poetry_generator.py --prompt 'Nur durch das Morgentor des Schönen\\nDrangst du in der Erkenntnis Land.\\nAn höhern Glanz sich zu gewöhnen,\\nÜbt sich am Reize der Verstand.' --rhyme_scheme aabb --LLM Anjoe/german-poetry-gpt2-large"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%run poetry_generator.py --prompt 'Nur durch das Morgentor des Schönen\\nDrangst du in der Erkenntnis Land.\\nAn höhern Glanz sich zu gewöhnen,\\nÜbt sich am Reize der Verstand.' --rhyme_scheme aabb --LLM Anjoe/german-poetry-gpt2-large --use_tts False"
+   ]
   },
   {
    "cell_type": "markdown",
