added rythm algorithm to colab notebook

--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -800,6 +800,57 @@
    "source": [
     "otoi.translate('eynerley')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fixing the meter of a verse\n",
+    "The rythm of a verse is fixed with Spacy and Bert. Spacy detects which combinations of words could be deleted in order to shorten a verse if it is too long. The presented algorithm chooses the best of these options (according to meter and perplexity). If the meter is incorrect Bert tries to replace the problematic word or to insert an other word in front of it. Also if the verse is too short, Bert finds different options of inserting words and the one with the smallest perplexity value is chosen. The process is iterative. Below are two examples of adjusting the length of a verse. Since no context to the sentences is provided, the result of the more extreme change is not perfect. In the poetry generation algorithm gpt_poet only creates verses that are not too long. Therefore Bert does not get too much influence on the final output. However this rythm algorithm could be used independently for different gestures, for example in order to transform all sentences in a corpus to match a certain meter. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rythm import fix_rythm\n",
+    "from rythm_utils import verse_cl\n",
+    "from gpt2 import LLM_class\n",
+    "LLM_perplexity = LLM_class('Anjoe/german-poetry-gpt2-large',device='cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "test_verse_1 = verse_cl('Wer hatte ihm den weißen Stock gegeben')\n",
+    "test_verse_2 = verse_cl('Der Begriff Poesie umfasste in der Antike und frühen Neuzeit die Werke in gebundener Sprache, während im Mittelalter nur die quantitierende Dichtung in antiker Tradition als poesis bezeichnet wurde') #wikipedia DE Poesie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_verse = fix_rythm(test_verse_1,[0,1],9,LLM_perplexity)  # verse, target ryth, number of syllables\n",
+    "print(' '.join(new_verse.text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_verse = fix_rythm(test_verse_2,[0,1],10,LLM_perplexity)  # verse, target ryth, number of syllables\n",
+    "print(' '.join(new_verse.text))"
+   ]
   }
  ],
  "metadata": {
