other fix for colab bug

--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -838,7 +838,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_verse = fix_rythm(test_verse_1,[0,1],9,LLM_perplexity)  # verse, target ryth, number of syllables\n",
+    "new_verse = fix_rythm(test_verse_1,[0,1],9,LLM_perplexity)  # verse, target rythm, number of syllables\n",
     "print(' '.join(new_verse.text))"
    ]
   },
@@ -848,7 +848,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_verse = fix_rythm(test_verse_2,[0,1],10,LLM_perplexity)  # verse, target ryth, number of syllables\n",
+    "new_verse = fix_rythm(test_verse_2,[0,1],10,LLM_perplexity)  # verse, target rythm, number of syllables\n",
     "print(' '.join(new_verse.text))"
    ]
   }
