adding number of generated poems parameter

--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -471,7 +471,8 @@
    },
    "source": [
     "# Start generating\n",
-    "the result will be saved in llm_poetry_generation/logs. "
+    "the result will be saved in llm_poetry_generation/logs.\n",
+    "Use below if you don't have access to a high Ram Colab runtime\n"
    ]
   },
   {
@@ -480,7 +481,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run poetry_generator.py --prompt 'Nur durch das Morgentor des Schönen\\nDrangst du in der Erkenntnis Land.\\nAn höhern Glanz sich zu gewöhnen,\\nÜbt sich am Reize der Verstand.' --rhyme_scheme aabb --LLM Anjoe/german-poetry-gpt2-large --use_tts False"
+    "%run poetry_generator.py --rhyme_scheme aabb --title 'Die Regierung' --LLM Anjoe/german-poetry-gpt2 --use_tts False --generated_poems 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you have paid access to a Colab runtime with high ram you may uncomment and run this: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%run poetry_generator.py --prompt 'Nur durch das Morgentor des Schönen\\nDrangst du in der Erkenntnis Land.\\nAn höhern Glanz sich zu gewöhnen,\\nÜbt sich am Reize der Verstand.' --rhyme_scheme aabb --LLM Anjoe/german-poetry-gpt2-large --use_tts False --generated_poems 1"
    ]
   },
   {
@@ -555,6 +572,22 @@
     "rhyme_parameters.LLM_sampling = 'systematic'\n",
     "rhyme_parameters.LLM_rhyme = None  # makes it same as LLM\n",
     "rhyme_parameters.LLM_rhyme_sampling = None  # makes it same as LLM\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if you have access to a high RAM runtime, don't run the below cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rhyme_parameters.LLM = 'Anjoe/german-poetry-gpt2'"
    ]
   },
   {
