updated colab defaults

--- a/colabs/Poetry_generation.ipynb
+++ b/colabs/Poetry_generation.ipynb
@@ -481,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run poetry_generator.py --rhyme_scheme aabb --title 'Die Regierung' --LLM Anjoe/german-poetry-gpt2 --use_tts False --generated_poems 1"
+    "%run poetry_generator.py --rhyme_scheme aabb --title 'Die Regierung' --LLM Anjoe/german-poetry-gpt2 --use_tts False --generated_poems 1 --generated_lines 4"
    ]
   },
   {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "k8uGr6dJNL6T"
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "id": "NGc52hDJNVor"
    },
@@ -534,12 +534,12 @@
     "das Licht gar unerreichbar scheint,\n",
     "doch nun ist es soweit er sieht'''\n",
     "\n",
-    "rhyming_lines = [1,3]"
+    "rhyming_lines = [2,4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "id": "oMyA-jPTfOZN"
    },
@@ -569,9 +569,12 @@
     "rhyme_parameters.rhyme_temperature = 1\n",
     "rhyme_parameters.allow_pos_match = True\n",
     "rhyme_parameters.LLM = 'Anjoe/german-poetry-gpt2-large'\n",
+    "rhyme_parameters.invalid_verse_ends = []\n",
     "rhyme_parameters.LLM_sampling = 'systematic'\n",
     "rhyme_parameters.LLM_rhyme = None  # makes it same as LLM\n",
-    "rhyme_parameters.LLM_rhyme_sampling = None  # makes it same as LLM\n"
+    "rhyme_parameters.LLM_rhyme_sampling = None  # makes it same as LLM\n",
+    "rhyme_parameters.repetition_penalty = 1.2\n",
+    "rhyme_parameters.size_tts_sample = 10\n"
    ]
   },
   {
@@ -583,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "id": "wB3HH9CEfT5k"
    },
